feat: add field validations, error handling and connection with doctor/admin tables from people service - Scheduling-service